--- a/native/android/build.gradle
+++ b/native/android/build.gradle
@@ -9,9 +9,10 @@ buildscript {
 
   dependencies {
     classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-alpha09"
-    classpath 'com.android.tools.build:gradle:4.0.0'
+    classpath 'com.android.tools.build:gradle:4.0.1'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.72"
     classpath 'com.google.gms:google-services:4.3.3'
+    classpath 'com.google.firebase:perf-plugin:1.3.1'  // Performance Monitoring plugin
   }
 }
 
