--- a/native/android/app/build.gradle
+++ b/native/android/app/build.gradle
@@ -5,95 +5,98 @@ apply plugin: 'com.google.gms.google-services'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'androidx.navigation.safeargs'
 apply plugin: 'com.google.firebase.firebase-perf'
+apply plugin: 'com.google.firebase.crashlytics'
 
 android {
-  compileSdkVersion 28
-  buildToolsVersion "28.0.3"
+    compileSdkVersion 28
+    buildToolsVersion "28.0.3"
 
-  dataBinding {
-    enabled = true
-  }
-
-  defaultConfig {
-    applicationId "work.calmato.prestopay"
-    minSdkVersion 28
-    targetSdkVersion 28
-    versionCode 1
-    versionName "1.0"
-
-    testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-  }
-
-  buildTypes {
-    customDebugType {
-      debuggable true
+    dataBinding {
+        enabled = true
     }
-    release {
-      minifyEnabled false
-      proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+
+    defaultConfig {
+        applicationId "work.calmato.prestopay"
+        minSdkVersion 28
+        targetSdkVersion 28
+        versionCode 1
+        versionName "1.0"
+
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-  }
+
+    buildTypes {
+        customDebugType {
+            debuggable true
+        }
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
 
 }
 
 dependencies {
-  implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-  implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-  kapt "android.arch.lifecycle:compiler:1.1.1"
-  implementation 'androidx.room:room-runtime:2.2.5'
-  kapt "android.arch.persistence.room:compiler:1.0.0"
-  def nav_version = "2.3.0-alpha05"
-  implementation fileTree(dir: 'libs', include: ['*.jar'])
-  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-  implementation 'androidx.appcompat:appcompat:1.1.0'
-  implementation 'androidx.core:core-ktx:1.3.0'
-  implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-  implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-  implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
-  androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-  androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'com.google.firebase:firebase-invites:17.0.0'
+    kapt "android.arch.lifecycle:compiler:1.1.1"
+    implementation 'androidx.room:room-runtime:2.2.5'
+    kapt "android.arch.persistence.room:compiler:1.1.1"
+    def nav_version = "2.3.0-alpha05"
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.core:core-ktx:1.3.1'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
 
-  // Testing Navigation
-  androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
-  implementation 'com.google.android.material:material:1.3.0-alpha01'
+    // Testing Navigation
+    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
+    implementation 'com.google.android.material:material:1.3.0-alpha02'
 
-  //firebase
-  implementation 'com.google.firebase:firebase-analytics:17.4.3'
-  implementation 'com.google.firebase:firebase-auth:19.3.1'
-  implementation 'com.google.android.gms:play-services-auth:18.0.0'
-  implementation 'com.google.firebase:firebase-dynamic-links-ktx:19.1.0'
-  implementation 'com.google.firebase:firebase-analytics-ktx:17.4.4'
-  implementation 'com.google.firebase:firebase-perf:19.0.8'
+    //firebase
+    implementation 'com.google.firebase:firebase-analytics:17.4.4'
+    implementation 'com.google.firebase:firebase-auth:19.3.2'
+    implementation 'com.google.android.gms:play-services-auth:18.1.0'
+    implementation 'com.google.firebase:firebase-dynamic-links-ktx:19.1.0'
+    implementation 'com.google.firebase:firebase-analytics-ktx:17.4.4'
+    implementation 'com.google.firebase:firebase-crashlytics:17.1.1'
+    implementation 'com.google.firebase:firebase-perf:19.0.8'
 
-  //Twitter SDK
-  implementation 'com.twitter.sdk.android:twitter-core:3.1.1'
+    //Twitter SDK
+    implementation 'com.twitter.sdk.android:twitter-core:3.1.1'
 
-  //Facebook
-  implementation 'com.facebook.android:facebook-android-sdk:4.42.0'
+    //Facebook
+    implementation 'com.facebook.android:facebook-android-sdk:4.42.0'
 
-  implementation 'com.google.code.gson:gson:2.8.6'
-  implementation 'com.squareup.retrofit2:retrofit:2.5.0'
-  implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
-  implementation 'com.squareup.okhttp3:okhttp:3.12.1'
-  implementation group: 'org.json', name: 'json', version: '20180813'
-  implementation group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.9.6'
-  testImplementation 'junit:junit:4.12'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.12.1'
+    implementation group: 'org.json', name: 'json', version: '20180813'
+    implementation group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.9.6'
+    testImplementation 'junit:junit:4.13'
 
-  // Moshi
-  implementation "com.squareup.moshi:moshi:1.8.0"
-  implementation "com.squareup.moshi:moshi-kotlin:1.8.0"
+    // Moshi
+    implementation "com.squareup.moshi:moshi:1.8.0"
+    implementation "com.squareup.moshi:moshi-kotlin:1.8.0"
 
-  // Retrofit with Moshi Converter
-  implementation "com.squareup.retrofit2:retrofit:2.5.0"
-  implementation "com.squareup.retrofit2:converter-moshi:2.5.0"
+    // Retrofit with Moshi Converter
+    implementation "com.squareup.retrofit2:retrofit:2.5.0"
+    implementation "com.squareup.retrofit2:converter-moshi:2.5.0"
 
-  // Coroutines
-  implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0"
-  implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0"
+    // Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0"
 
-  // Retrofit Coroutines Support
-  implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
+    // Retrofit Coroutines Support
+    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
 
-  implementation 'com.squareup.picasso:picasso:2.5.2'
-  implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
 }
