--- a/docs/12_backend/21_swagger/apiv1.yaml
+++ b/docs/12_backend/21_swagger/apiv1.yaml
@@ -268,6 +268,33 @@ paths:
         '500':
           $ref: '#/components/responses/Unkown'
 
+  /groups/{groupId}/users:
+    post:
+      summary: グループ ユーザー追加
+      security:
+        - BearerAuth: []
+      parameters:
+        - in: path
+          name: groupId
+          schema:
+            type: string
+            format: uuid
+          required: true
+          description: グループUUID
+      requestBody:
+        $ref: '#/components/requestBodies/AddUsersInGroup'
+      responses:
+        '200':
+          $ref: '#/components/responses/AddUsersInGroup'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '403':
+          $ref: '#/components/responses/Forbidden'
+        '500':
+          $ref: '#/components/responses/Unkown'
+
   /groups/{groupId}/payment:
     post:
       summary: 支払い情報追加
@@ -469,6 +496,21 @@ components:
                   format: uuid
             required:
               - name
+
+    AddUsersInGroup:
+      description: グループ ユーザー追加
+      required: true
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              userIds:
+                type: array
+                description: ユーザーID一覧
+                items:
+                  type: string
+                  format: uuid
 
     CreatePayment:
       description: 支払い情報追加
@@ -942,9 +984,40 @@ components:
                 format: date-time
                 description: 更新日時
 
-
     CreateGroup:
       description: グループ作成APIのレスポンス
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              id:
+                type: string
+                format: uuid
+                description: グループID
+              name:
+                type: string
+                description: グループ名
+              thumbnailUrl:
+                type: string
+                description: サムネイルURL
+              userIds:
+                type: array
+                description: ユーザーID一覧
+                items:
+                  type: string
+                  format: uuid
+              createdAt:
+                type: string
+                format: date-time
+                description: 作成日時
+              updatedAt:
+                type: string
+                format: date-time
+                description: 更新日時
+
+    AddUsersInGroup:
+      description: グループ ユーザー追加APIのレスポンス
       content:
         application/json:
           schema:
