--- a/.github/workflows/ci-terraform.yaml
+++ b/.github/workflows/ci-terraform.yaml
@@ -4,6 +4,7 @@ on:
     paths:
       - 'infra/terraform/env/stg/**'
       - 'infra/terraform/modules/**'
+      - '.github/workflows/ci-terraform.yaml'
 
 env:
   tf_version: 'latest'
