--- a/.github/workflows/ci-calc-api-reviewdog.yaml
+++ b/.github/workflows/ci-calc-api-reviewdog.yaml
@@ -3,6 +3,7 @@ on:
   pull_request:
     paths:
       - 'api/calc/**'
+      - '.github/workflows/ci-calc-api-reviewdog.yaml'
 
 jobs:
   reviewdog:
