--- a/.github/workflows/ci-terraform.yaml
+++ b/.github/workflows/ci-terraform.yaml
@@ -1,10 +1,12 @@
 name: Terraform(stg) Test
 on:
+  push:
+    paths:
+      - 'infra/terraform/modules/**'
+      - '.github/workflows/ci-terraform.yaml'
   pull_request:
     paths:
       - 'infra/terraform/env/stg/**'
-      - 'infra/terraform/modules/**'
-      - '.github/workflows/ci-terraform.yaml'
 
 env:
   tf_version: 'latest'
