--- a/.github/workflows/ci-android-on-master-branch.yaml
+++ b/.github/workflows/ci-android-on-master-branch.yaml
@@ -96,4 +96,4 @@ jobs:
               click:action_person=,\
               click:logoutButton=,\
               ignore:camera=,\
-              ignore:thumbnailEdit=
+              ignore:thumbnailEdit=,
