docs: Update swagger

--- a/docs/12_backend/21_swagger/internal.yaml
+++ b/docs/12_backend/21_swagger/internal.yaml
@@ -294,6 +294,9 @@ components:
                 items:
                   type: string
                   format: uuid
+              instanceId:
+                type: string
+                description: インスタンスID
               createdAt:
                 type: string
                 format: date-time
