--- a/docs/12_backend/21_swagger/apiv1.yaml
+++ b/docs/12_backend/21_swagger/apiv1.yaml
@@ -131,6 +131,25 @@ paths:
         '500':
           $ref: '#/components/responses/Unkown'
 
+  /auth/device:
+    post:
+      summary: デバイスID登録
+      security:
+        - BearerAuth: []
+      requestBody:
+        $ref: '#/components/requestBodies/RegisterInstanceID'
+      responses:
+        '200':
+          $ref: '#/components/responses/RegisterInstanceID'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '409':
+          $ref: '#/components/responses/Conflict'
+        '500':
+          $ref: '#/components/responses/Unkown'
+
   /users:
     get:
       summary: ユーザー検索
@@ -450,6 +469,20 @@ components:
             required:
               - userId
 
+    RegisterInstanceID:
+      description: デバイスID登録APIのリクエスト
+      required: true
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              instanceId:
+                type: string
+                description: デバイスのID
+            required:
+              - instanceId
+
     UniqueCheckUserEmail:
       description: ユーザー メールアドレスユニーク検証APIのリクエスト
       required: true
@@ -720,6 +753,51 @@ components:
 
     CreateUser:
       description: ユーザー登録APIのレスポンス
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              id:
+                type: string
+                format: uuid
+                description: ユーザーID
+              name:
+                type: string
+                description: 表示名
+              username:
+                type: string
+                description: ユーザー名
+              email:
+                type: string
+                format: email
+                description: メールアドレス
+              thumbnailUrl:
+                type: string
+                description: サムネイルURL
+              groupIds:
+                type: array
+                description: グループID一覧
+                items:
+                  type: string
+                  format: uuid
+              friendIds:
+                type: array
+                description: 友達ID一覧
+                items:
+                  type: string
+                  format: uuid
+              createdAt:
+                type: string
+                format: date-time
+                description: 作成日時
+              updatedAt:
+                type: string
+                format: date-time
+                description: 更新日時
+
+    RegisterInstanceID:
+      description: デバイスID登録APIのレスポンス
       content:
         application/json:
           schema:
