--- a/native/android/app/build.gradle
+++ b/native/android/app/build.gradle
@@ -99,4 +99,6 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
+
+    implementation 'com.github.yalantis:ucrop:2.2.5'
 }
