--- a/native/android/build.gradle
+++ b/native/android/build.gradle
@@ -5,6 +5,7 @@ buildscript {
   repositories {
     google()
     jcenter()
+    maven { url "https://jitpack.io" }
   }
 
   dependencies {
@@ -22,9 +23,7 @@ allprojects {
   repositories {
     google()
     jcenter()
-    maven {
-      url "https://maven.google.com"
-    }
+    maven { url "https://jitpack.io" }
   }
 }
 
