--- a/native/android/app/src/main/AndroidManifest.xml
+++ b/native/android/app/src/main/AndroidManifest.xml
@@ -44,7 +44,7 @@
     </activity>
     <!-- [START firebase_service] -->
     <service
-        android:name=".java.MyFirebaseMessagingService"
+        android:name=".util.MyFirebaseMessagingService"
         android:exported="false">
         <intent-filter>
             <action android:name="com.google.firebase.MESSAGING_EVENT" />
