--- a/infra/kubernetes/stg/monitoring/statefulset-prometheus.yaml
+++ b/infra/kubernetes/stg/monitoring/statefulset-prometheus.yaml
@@ -1,11 +1,12 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 
 metadata:
   name: prometheus
   namespace: monitoring
 
 spec:
+  serviceName: prometheus
   replicas: 1
   selector:
     matchLabels:
@@ -34,7 +35,19 @@ spec:
           volumeMounts:
             - name: prometheus-config
               mountPath: /etc/prometheus
+            - name: prometheus-storage
+              mountPath: /data
       volumes:
         - name: prometheus-config
           configMap:
             name: prometheus
+
+  volumeClaimTemplates:
+    - metadata:
+        name: prometheus-storage
+      spec:
+        accessModes:
+          - ReadWriteOnce
+        resources:
+          requests:
+            storage: 1Gi
