--- a/.github/workflows/ci-native.yaml
+++ b/.github/workflows/ci-native.yaml
@@ -76,6 +76,11 @@ jobs:
         working-directory: ./native/react
         run: yarn
 
+      - name: Use JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+
       - name: Build Debug APK
         working-directory: ./native/react/android
         run: ./gradlew assembleDebug --stacktrace
@@ -99,7 +104,7 @@ jobs:
   build_ios:
     name: Build iOS
     needs: setup_and_test
-    runs-on: [self-hosted, macos]
+    runs-on: macos-latest
 
     strategy:
       matrix:
@@ -128,6 +133,14 @@ jobs:
       - name: Install
         working-directory: ./native/react
         run: yarn
+
+      - name: Get CocoaPods cache files
+        uses: actions/cache@preview
+        with:
+          path: ./native/react/ios/Pods
+          key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-pods-
 
       - name: Pod Install
         working-directory: ./native/react/ios
