--- a/native/react/package.json
+++ b/native/react/package.json
@@ -1,54 +1,25 @@
 {
-  "name": "PrestoPay",
-  "version": "0.0.1",
-  "private": true,
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "start": "react-native start",
-    "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/bottom-tabs": "5.8.0",
-    "@react-navigation/drawer": "5.9.0",
-    "@react-navigation/native": "5.7.3",
-    "@react-navigation/stack": "5.9.0",
-    "react": "16.13.1",
-    "react-native": "0.63.2",
-    "react-native-gesture-handler": "1.8.0",
-    "react-native-reanimated": "1.13.0",
-    "react-native-safe-area-context": "3.1.7",
-    "react-native-screens": "2.10.1"
+    "expo": "~38.0.8",
+    "expo-status-bar": "^1.0.2",
+    "react": "~16.11.0",
+    "react-dom": "~16.11.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-web": "~0.11.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/runtime": "^7.8.4",
-    "@react-native-community/eslint-config": "^1.1.0",
-    "@types/jest": "^25.2.3",
-    "@types/react-native": "^0.63.2",
-    "@types/react-test-renderer": "^16.9.2",
-    "@typescript-eslint/eslint-plugin": "^2.27.0",
-    "@typescript-eslint/parser": "^2.27.0",
-    "babel-jest": "^25.1.0",
-    "babel-plugin-module-resolver": "^4.0.0",
-    "eslint": "^6.5.1",
-    "jest": "^25.1.0",
-    "metro-react-native-babel-preset": "^0.59.0",
-    "prettier": "^2.0.4",
-    "react-test-renderer": "16.13.1",
-    "typescript": "^3.8.3"
+    "@babel/core": "^7.8.6",
+    "@types/react": "~16.9.41",
+    "@types/react-native": "~0.62.13",
+    "typescript": "~3.9.5"
   },
-  "jest": {
-    "preset": "react-native",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
-    ]
-  }
+  "private": true
 }
