--- a/native/react/tsconfig.json
+++ b/native/react/tsconfig.json
@@ -57,14 +57,15 @@
     /* Experimental Options */
     // "experimentalDecorators": true,        /* Enables experimental support for ES7 decorators. */
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
-    "exclude": [
-      "node_modules",
-      "babel.config.js",
-      "jest.config.js"
-    ],
 
     /* Other Options */
     "skipLibCheck": true,
     "resolveJsonModule": true,
-  }
+  },
+  "exclude": [
+    "node_modules",
+    "babel.config.js",
+    "metro.config.js",
+    "jest.config.js"
+  ],
 }
