--- a/native/react/package.json
+++ b/native/react/package.json
@@ -9,10 +9,10 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "expo": "~38.0.8",
-    "expo-status-bar": "^1.0.2",
-    "react": "~16.11.0",
-    "react-dom": "~16.11.0",
+    "expo": "^38.0.0",
+    "expo-status-bar": "^1.0.0",
+    "react": "16.11.0",
+    "react-dom": "16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-web": "~0.11.7"
   },
