--- a/native/react/package.json
+++ b/native/react/package.json
@@ -9,11 +9,20 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "5.8.0",
+    "@react-navigation/drawer": "5.9.0",
+    "@react-navigation/native": "5.7.3",
+    "@react-navigation/stack": "5.9.0",
     "expo": "^38.0.0",
     "expo-status-bar": "^1.0.0",
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-reanimated": "~1.9.0",
+    "react-native-safe-area-context": "~3.0.7",
+    "react-native-screens": "~2.9.0",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
