--- a/native/react/package.json
+++ b/native/react/package.json
@@ -9,12 +9,14 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@expo/vector-icons": "10.2.1",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "5.8.0",
     "@react-navigation/drawer": "5.9.0",
     "@react-navigation/native": "5.7.3",
     "@react-navigation/stack": "5.9.0",
     "expo": "^38.0.0",
+    "expo-font": "^8.2.2",
     "expo-status-bar": "^1.0.0",
     "react": "16.11.0",
     "react-dom": "16.11.0",
