--- a/api/calc/.golangci.yaml
+++ b/api/calc/.golangci.yaml
@@ -50,6 +50,7 @@ issues:
   exclude:
     - Using the variable on range scope .* in function literal
     - func name will be used as * by other packages, and that stutters; consider calling this
+    - lines are duplicate of
   exclude-rules:
     - path: _test\.go
       linters:
