--- a/docs/12_backend/21_swagger/apiv1.yaml
+++ b/docs/12_backend/21_swagger/apiv1.yaml
@@ -367,7 +367,7 @@ paths:
           $ref: '#/components/responses/Unkown'
 
 
-  /groups/{groupId}/payment:
+  /groups/{groupId}/payments:
     get:
       summary: 支払い情報一覧取得
       security:
@@ -413,6 +413,40 @@ paths:
       responses:
         '200':
           $ref: '#/components/responses/CreatePayment'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '403':
+          $ref: '#/components/responses/Forbidden'
+        '500':
+          $ref: '#/components/responses/Unkown'
+
+  /groups/{groupId}/payments/{paymentId}:
+    patch:
+      summary: 支払い情報更新
+      security:
+        - BearerAuth: []
+      parameters:
+        - in: path
+          name: groupId
+          schema:
+            type: string
+            format: uuid
+          required: true
+          description: グループUUID
+        - in: path
+          name: paymentId
+          schema:
+            type: string
+            format: uuid
+          required: true
+          description: グループUUID
+      requestBody:
+        $ref: '#/components/requestBodies/UpdatePayment'
+      responses:
+        '200':
+          $ref: '#/components/responses/UpdatePayment'
         '400':
           $ref: '#/components/responses/BadRequest'
         '401':
@@ -712,6 +746,60 @@ components:
             required:
               - name
               - total
+              - paidAt
+
+    UpdatePayment:
+      description: 支払い情報編集
+      required: true
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              name:
+                type: string
+                description: 支払い名
+              currency:
+                type: string
+                description: 通貨
+              total:
+                type: integer
+                description: 合計金額
+              payers:
+                type: array
+                description: 支払い者一覧
+                items:
+                  properties:
+                    id:
+                      type: string
+                      description: ユーザーID
+                    amount:
+                      type: integer
+                      description: 支払い金額
+              isCompleted:
+                type: boolean
+                description: 支払い完了フラグ
+              tags:
+                type: array
+                description: タグ一覧
+                items:
+                  type: string
+              comment:
+                type: string
+                description: コメント
+              images:
+                type: array
+                description: 添付画像一覧
+                items:
+                  type: string
+              paidAt:
+                type: string
+                format: date-time
+                description: 支払い日時
+            required:
+              - name
+              - total
+              - isCompleted
               - paidAt
 
   responses:
@@ -1340,6 +1428,73 @@ components:
                     amount:
                       type: integer
                       description: 支払い金額
+                    isPaid:
+                      type: boolean
+                      description: 支払い完了フラグ
+              isCompleted:
+                type: boolean
+                description: 支払い完了フラグ
+              tags:
+                type: array
+                description: タグ一覧
+                items:
+                  type: string
+              comment:
+                type: string
+                description: コメント
+              imageUrls:
+                type: array
+                description: 添付画像一覧
+                items:
+                  type: string
+              paidAt:
+                type: string
+                format: date-time
+                description: 支払い日時
+              createdAt:
+                type: string
+                format: date-time
+                description: 作成日時
+              updatedAt:
+                type: string
+
+    UpdatePayment:
+      description: 支払い情報編集APIのレスポンス
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              id:
+                type: string
+                format: uuid
+                description: 支払いID
+              name:
+                type: string
+                description: 支払い名
+              currency:
+                type: string
+                description: 通貨
+              total:
+                type: integer
+                description: 合計金額
+              payers:
+                type: array
+                description: 支払い者一覧
+                items:
+                  properties:
+                    id:
+                      type: string
+                      description: ユーザーID
+                    amount:
+                      type: integer
+                      description: 支払い金額
+                    isPaid:
+                      type: boolean
+                      description: 支払い完了フラグ
+              isCompleted:
+                type: boolean
+                description: 支払い完了フラグ
               tags:
                 type: array
                 description: タグ一覧
