--- a/docs/12_backend/21_swagger/apiv1.yaml
+++ b/docs/12_backend/21_swagger/apiv1.yaml
@@ -366,6 +366,62 @@ paths:
         '500':
           $ref: '#/components/responses/Unkown'
 
+  /groups/{groupId}/payments-status:
+    patch:
+      summary: 支払い完了フラグ一括更新 (trueのみ)
+      security:
+        - BearerAuth: []
+      parameters:
+        - in: path
+          name: groupId
+          schema:
+            type: string
+            format: uuid
+          required: true
+          description: グループUUID
+      responses:
+        '200':
+          $ref: '#/components/responses/UpdatePayments'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '403':
+          $ref: '#/components/responses/Forbidden'
+        '500':
+          $ref: '#/components/responses/Unkown'
+
+  /groups/{groupId}/payments-status/{paymentId}:
+    patch:
+      summary: 支払い完了フラグ更新
+      security:
+        - BearerAuth: []
+      parameters:
+        - in: path
+          name: groupId
+          schema:
+            type: string
+            format: uuid
+          required: true
+          description: グループUUID
+        - in: path
+          name: paymentId
+          schema:
+            type: string
+            format: uuid
+          required: true
+          description: 支払いUUID
+      responses:
+        '200':
+          $ref: '#/components/responses/UpdatePayment'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '403':
+          $ref: '#/components/responses/Forbidden'
+        '500':
+          $ref: '#/components/responses/Unkown'
 
   /groups/{groupId}/payments:
     get:
@@ -1616,6 +1672,81 @@ components:
                           amount:
                             type: integer
                             description: 支払い金額
+                          isPaid:
+                            type: boolean
+                            description: 支払い完了フラグ
+                    isCompleted:
+                      type: boolean
+                      description: 支払い完了フラグ
+                    tags:
+                      type: array
+                      description: タグ一覧
+                      items:
+                        type: string
+                    comment:
+                      type: string
+                      description: コメント
+                    imageUrls:
+                      type: array
+                      description: 添付画像一覧
+                      items:
+                        type: string
+                    paidAt:
+                      type: string
+                      format: date-time
+                      description: 支払い日時
+                    createdAt:
+                      type: string
+                      format: date-time
+                      description: 作成日時
+                    updatedAt:
+                      type: string
+
+    UpdatePayments:
+      description: 支払い情報一括更新APIのレスポンス
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              payments:
+                type: array
+                description: 支払い一覧
+                items:
+                  properties:
+                    id:
+                      type: string
+                      format: uuid
+                      description: 支払いID
+                    name:
+                      type: string
+                      description: 支払い名
+                    currency:
+                      type: string
+                      description: 通貨
+                    total:
+                      type: integer
+                      description: 合計金額
+                    payers:
+                      type: array
+                      description: 支払い者一覧
+                      items:
+                        properties:
+                          id:
+                            type: string
+                            description: ユーザーID
+                          name:
+                            type: string
+                            description: ユーザー名
+                          amount:
+                            type: integer
+                            description: 支払い金額
+                          isPaid:
+                            type: boolean
+                            description: 支払い完了フラグ
+                    isCompleted:
+                      type: boolean
+                      description: 支払い完了フラグ
                     tags:
                       type: array
                       description: タグ一覧
