--- a/docs/12_backend/21_swagger/apiv1.yaml
+++ b/docs/12_backend/21_swagger/apiv1.yaml
@@ -1577,6 +1577,10 @@ components:
                 type: string
                 format: uuid
                 description: 支払いID
+              groupId:
+                type: string
+                format: uuid
+                description: グループID
               name:
                 type: string
                 description: 支払い名
@@ -1638,6 +1642,10 @@ components:
                 type: string
                 format: uuid
                 description: 支払いID
+              groupId:
+                type: string
+                format: uuid
+                description: グループID
               name:
                 type: string
                 description: 支払い名
@@ -1704,6 +1712,10 @@ components:
                       type: string
                       format: uuid
                       description: 支払いID
+                    groupId:
+                      type: string
+                      format: uuid
+                      description: グループID
                     name:
                       type: string
                       description: 支払い名
@@ -1773,6 +1785,10 @@ components:
                       type: string
                       format: uuid
                       description: 支払いID
+                    groupId:
+                      type: string
+                      format: uuid
+                      description: グループID
                     name:
                       type: string
                       description: 支払い名
