--- a/native/react/package.json
+++ b/native/react/package.json
@@ -31,10 +31,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
+    "@types/node": "14.11.1",
     "@types/react": "~16.9.41",
     "@types/react-native": "~0.62.13",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
+    "babel-plugin-inline-dotenv": "1.6.0",
     "eslint": "^7.8.1",
     "eslint-config-prettier": "6.11.0",
     "eslint-config-universe": "4.0.0",
