--- a/native/react/package.json
+++ b/native/react/package.json
@@ -18,6 +18,7 @@
     "expo": "^38.0.0",
     "expo-font": "^8.2.2",
     "expo-status-bar": "^1.0.0",
+    "firebase": "7.21.0",
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
