--- a/native/react/package.json
+++ b/native/react/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "10.2.1",
+    "@react-native-community/async-storage": "1.12.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "5.8.0",
     "@react-navigation/drawer": "5.9.0",
@@ -28,13 +29,17 @@
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-vector-icons": "^7.0.0",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "react-redux": "7.2.1",
+    "redux": "4.0.5",
+    "redux-thunk": "2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
     "@types/node": "14.11.1",
     "@types/react": "~16.9.41",
     "@types/react-native": "~0.62.13",
+    "@types/react-redux": "7.1.9",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
     "babel-plugin-inline-dotenv": "1.6.0",
