feat Update splash page

--- a/native/react/app.json
+++ b/native/react/app.json
@@ -11,9 +11,9 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/presto-pay.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#2BACFC"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
