--- a/docker-compose.api.yaml
+++ b/docker-compose.api.yaml
@@ -42,6 +42,20 @@ services:
       - GCP_STORAGE_BUCKET_NAME=${GCP_STORAGE_BUCKET_NAME}
     command: realize start
 
+  batch:
+    container_name: presto_pay_batch
+    build:
+      context: ./infra/docker/api/batch
+      dockerfile: Dockerfile_development
+    working_dir: /go/src/github.com/calmato/presto-pay/api/batch
+    volumes:
+      - ./api/batch:/go/src/github.com/calmato/presto-pay/api/batch:cached
+
+  redis:
+    container_name: presto_pay_redis
+    build:
+      context: ./infra/docker/redis
+
   swagger:
     container_name: presto_pay_swagger
     build:
