--- a/infra/kubernetes/stg/default/service.yaml
+++ b/infra/kubernetes/stg/default/service.yaml
@@ -32,3 +32,21 @@ spec:
       protocol: TCP
       port: 80
       targetPort: 8080
+
+---
+apiVersion: v1
+kind: Service
+
+metadata:
+  name: redis
+
+spec:
+  selector:
+    app: redis
+
+  type: NodePort
+  ports:
+    - name: tcp
+      protocol: TCP
+      port: 6379
+      targetPort: 6379
