--- a/infra/kubernetes/Makefile
+++ b/infra/kubernetes/Makefile
@@ -33,7 +33,7 @@ update-deployment:
 	kubectl patch deploy ${APP_NAME} -p "{\"spec\": {\"template\": {\"metadata\": {\"labels\": {\"date\": \"${CURRENT}\" }}}}}"
 
 update-cronjob:
-	kubectl patch deploy ${APP_NAME} -p "{\"spec\": {\"template\": {\"metadata\": {\"labels\": {\"date\": \"${CURRENT}\" }}}}}"
+	kubectl patch cronjob ${APP_NAME} -p "{\"spec\": {\"template\": {\"metadata\": {\"labels\": {\"date\": \"${CURRENT}\" }}}}}"
 
 update-manifest-all:
 	$(MAKE) update-deployment APP_NAME=user-api
